--- a/articulo/articulo2.tex
+++ b/articulo/articulo2.tex
@@ -33,9 +33,24 @@ Miguel Angel Rivas Torres
 \section{Introduction}
 Climate change and air pollution are known to pose critical challenges when it comes to public health. In particular, exposition to gases such as nitrogen dioxide, ozone, and fine particulate matter have been linked to diminished biological biomarkers which are associated with cardiovascular risk, inflammation, and respiratory function. In Mexico, environmental pollution remains a significant health concern, and several measures have been taken in an attempt to mitigate the associated risks as much as possible. However, some of these dangers are not fully understood, and neither are the ways to counteract them.
 Given that these contaminants interact with each other in intricate ways, complex relationships emerge which, in turn,  lend themselves to analysis via Gaussian Bayesian networks. 
-In particular, 
+In particular,
 
-%miguel pon tu investigación aquí, yo luego completo la intro más
+\vspace{0.5cm}
+
+Exposure to air pollutants such as SO$_2$, CO, NO$_x$, VOCs, PM$_{10}$, PM$_{2.5}$, and NH$_3$ has a direct impact on various biomarkers related to respiratory, cardiovascular, and metabolic health. The main effects include:
+
+\begin{itemize}
+    \item \textbf{Particulate matter (PM$_{10}$ and PM$_{2.5}$):} Cause major problems in the lungs and bloodstream, contributing to systemic inflammation and increased C-reactive protein.
+    \item \textbf{Carbon monoxide (CO):} Limits oxygen transport, leading to hypoxia and affecting cardiac biomarkers such as blood pressure and heart rate.
+    \item \textbf{Nitrogen oxides (NO$_x$):} Induce vascular inflammation and accelerate atherosclerosis.
+    \item \textbf{Sulfur dioxide (SO$_2$):} Irritates the respiratory tract and, when converted to sulfates, enhances lung and cardiovascular damage.
+    \item \textbf{Volatile organic compounds (VOCs):} Alter the central nervous system and reduce cholinesterase levels in the blood, a key biomarker of exposure.
+    \item \textbf{Ammonia (NH$_3$):} Contributes to major diseases such as asthma, lung cancer, and premature mortality.
+\end{itemize}
+
+Overall, exposure to these pollutants negatively affects multiple systems in the human body, increasing metabolic, cardiovascular, and respiratory risks, which can have serious health consequences.
+
+
 
 \section{Methodology}
 
