--- a/articulo/articulo2.tex
+++ b/articulo/articulo2.tex
@@ -37,18 +37,23 @@ In particular,
 
 \vspace{0.5cm}
 
-Exposure to air pollutants such as SO$_2$, CO, NO$_x$, VOCs, PM$_{10}$, PM$_{2.5}$, and NH$_3$ has a direct impact on various biomarkers related to respiratory, cardiovascular, and metabolic health. The main effects include:
+Exposure to air pollutants such as SO$_2$, CO, NOx, VOCs, PM$_{10}$, PM$_{2.5}$, and NH$_3$ has a direct impact on various biomarkers related to respiratory, cardiovascular, and metabolic health. The main effects include:
 
 \begin{itemize}
-    \item \textbf{Particulate matter (PM$_{10}$ and PM$_{2.5}$):} Cause major problems in the lungs and bloodstream, contributing to systemic inflammation and increased C-reactive protein.
-    \item \textbf{Carbon monoxide (CO):} Limits oxygen transport, leading to hypoxia and affecting cardiac biomarkers such as blood pressure and heart rate.
-    \item \textbf{Nitrogen oxides (NO$_x$):} Induce vascular inflammation and accelerate atherosclerosis.
-    \item \textbf{Sulfur dioxide (SO$_2$):} Irritates the respiratory tract and, when converted to sulfates, enhances lung and cardiovascular damage.
-    \item \textbf{Volatile organic compounds (VOCs):} Alter the central nervous system and reduce cholinesterase levels in the blood, a key biomarker of exposure.
-    \item \textbf{Ammonia (NH$_3$):} Contributes to major diseases such as asthma, lung cancer, and premature mortality.
+    \item \textbf{Particulate matter (PM$_{10}$ and PM$_{2.5}$):} Penetrate the lungs and bloodstream, contributing to systemic inflammation. Key biomarkers affected include C-reactive protein, ferritin , homocysteine, and lipid profiles.
+    
+    \item \textbf{Carbon monoxide (CO):} Reduces oxygen transport, leading to hypoxia and affecting hemoglobin  and creatinine levels, as well as inflammatory markers.
+    
+    \item \textbf{Nitrogen oxides (NOx):} Promote vascular inflammation and accelerate atherosclerosis.Biomarkers impacted include C-reactive protein,LDL cholesterol, total cholesterol, glucose, and insulin levels.
+    
+    \item \textbf{Sulfur dioxide (SO$_2$):} Irritates the respiratory tract and, when converted to sulfates, increases lung and cardiovascular damage. Associated biomarkers include C-reactive protein, triglycerides, cholesterol, and hemoglobin.
+    
+    \item \textbf{Volatile organic compounds (VOCs):} Affect liver and kidney function, altering creatinine and uric acid levels, as well as inflammatory biomarkers.
+    
+    \item \textbf{Ammonia (NH$_3$):} Contributes to respiratory and metabolic disorders such as asthma and kidney stress, impacting creatinine, hemoglobin, and micronutrient biomarkers.
 \end{itemize}
 
-Overall, exposure to these pollutants negatively affects multiple systems in the human body, increasing metabolic, cardiovascular, and respiratory risks, which can have serious health consequences.
+Overall, exposure to these pollutants negatively affects multiple systems in the human body, increasing risks for metabolic, cardiovascular, and respiratory diseases, with potential serious health consequences.
 
 
 
