--- a/scripts/ExploraciónNans.ipynb
+++ b/scripts/ExploraciónNans.ipynb
@@ -1780,7 +1780,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1794,7 +1794,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
